[workspace]
members = [
    "harpiya",
    "harpiya-domain",
    "harpiya-model",
    "protos"
]
resolver = "2"

default-members = ["harpiya"]

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
sha2 = "0.10.8"
hkdf = "0.12.4"
serde = { version = "1.0.217", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
prost = "0.13.4"
prost-types = "0.13.4"
regex = "1.11.1"
sea-orm = { version = "1.1.3", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-types = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"